@@ -4,7 +4,8 @@ tinymce.init({
   selector: 'textarea.tinymce',
   plugins: 'lists code',
   toolbar: 'numlist bullist | code',
-  height: 600
+  height: 600,
+  contextmenu: 'lists'
 });
 
 export {};
