@@ -12,16 +12,19 @@ import * as NodeType from './NodeType';
 
 export const isCustomList = (list: HTMLElement) => /\btox\-/.test(list.className);
 
-export const listState = (editor: Editor, listName: string, activate: (active: boolean) => void) =>
-  () => {
-    const nodeChangeHandler = (e) => {
-      const inList = Arr.findUntil(e.parents, NodeType.isListNode, NodeType.isTableCellNode)
-        .filter((list: HTMLElement) => list.nodeName === listName && !isCustomList(list))
-        .isSome();
-      activate(inList);
-    };
-
-    editor.on('NodeChange', nodeChangeHandler);
-
-    return () => editor.off('NodeChange', nodeChangeHandler);
+export const listState = (editor: Editor, listName: string, activate: (active: boolean) => void) => {
+  const nodeChangeHandler = (e) => {
+    const inList = Arr.findUntil(e.parents, NodeType.isListNode, NodeType.isTableCellNode)
+      .filter((list: HTMLElement) => list.nodeName === listName && !isCustomList(list))
+      .isSome();
+    activate(inList);
   };
+
+  // Set the initial state
+  const parents = editor.dom.getParents(editor.selection.getNode());
+  nodeChangeHandler({ parents });
+
+  editor.on('NodeChange', nodeChangeHandler);
+
+  return () => editor.off('NodeChange', nodeChangeHandler);
+};
