@@ -1,4 +1,4 @@
-import { Pipeline, Log } from '@ephox/agar';
+import { Log, Pipeline } from '@ephox/agar';
 import { UnitTest } from '@ephox/bedrock-client';
 import { TinyApis, TinyLoader, TinyUi } from '@ephox/mcagar';
 
@@ -18,6 +18,7 @@ UnitTest.asynctest('tinymce.lists.browser.ToggleListWithEmptyLiTest', (success, 
         tinyApis.sFocus(),
         tinyApis.sSetContent('<ul><li>a</li><li>&nbsp;</li><li>&nbsp;</li><li>b</li></ul>'),
         tinyApis.sSetSelection([ 0, 0, 0 ], 0, [ 0, 3, 0 ], 1),
+        tinyUi.sWaitForUi('Wait for toolbar button to be active', 'button[aria-label="Bullet list"].tox-tbtn--enabled'),
         tinyUi.sClickOnToolbar('click list', 'button[aria-label="Bullet list"]'),
         tinyApis.sAssertContent('<p>a</p><p>&nbsp;</p><p>&nbsp;</p><p>b</p>')
       ])
